compiler/testData/diagnostics/tests/inference/typeMismatchOnUninferred.diag.txt
/typeMismatchOnUninferred.kt:7:11: error: type mismatch: inferred type is T but T & Any was expected
    foo22(z)
          ^
